<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.karen.medappjam1.newUser">
    
    <EditText
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:paddingBottom="30dp"
        android:text="Fill in the information below:"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:inputType="text" 
        android:layout_below="@+id/instruction"/>

    <EditText
        android:id="@+id/last_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:inputType="text"
        android:layout_below="@+id/first_name" />
    
    <EditText
        android:id= "@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_below="@+id/last_name"/>

    
</RelativeLayout>
